--- a/app/eventyay/static/pretixpresale/scss/main.scss
+++ b/app/eventyay/static/pretixpresale/scss/main.scss
@@ -41,7 +41,7 @@ footer nav {
 
 
 .login-hdr {
-    margin-left: 10px;
+    margin-left: 0;
 }
 
 
